[gd_scene load_steps=11 format=3 uid="uid://cbvw0ra3ip3s0"]

[ext_resource type="Script" path="res://MainMenu/script/Main_menu.gd" id="1_w2qva"]
[ext_resource type="Texture2D" uid="uid://3rnm5tstvumo" path="res://Other_Game_Assests/1e59de95d11fbbe870ba6bbea838e979.jpg" id="2_e3jyl"]
[ext_resource type="Texture2D" uid="uid://bbh23a0gewydc" path="res://MainMenu/ui/Volume.tres" id="2_n4oot"]
[ext_resource type="Texture2D" uid="uid://dclr8d47oow8i" path="res://MainMenu/ui/Play.tres" id="3_nnbfa"]
[ext_resource type="Texture2D" uid="uid://cwqbwqtem8isn" path="res://MainMenu/ui/Settings.tres" id="4_64rmq"]
[ext_resource type="PackedScene" uid="uid://c7yg0jloj8skr" path="res://MainMenu/Scene_menu/Settings_menu/Options.tscn" id="5_1v61x"]
[ext_resource type="PackedScene" uid="uid://mm0fdsclihsm" path="res://MainMenu/Scene_menu/Level_Selection/Game_Options_Countiue.tscn" id="6_wfrdb"]
[ext_resource type="AudioStream" uid="uid://dw0wb2c6o4gdm" path="res://Sounds/Sounds_Assest/Music/i-am-dreaming-or-final-fantasy-menu.mp3" id="7_gi4p7"]
[ext_resource type="AudioStream" uid="uid://bygwkjdfddqxy" path="res://Sounds/Sounds_Assest/SFX/mouse-click-153941.mp3" id="9_vr3fc"]

[sub_resource type="SystemFont" id="SystemFont_2veon"]
font_names = PackedStringArray("Algerian")

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_w2qva")

[node name="1e59De95d11Fbbe870Ba6Bbea838e979" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(574, 315)
scale = Vector2(3, 3)
texture = ExtResource("2_e3jyl")

[node name="Label" type="Label" parent="."]
layout_mode = 2
offset_top = 155.0
offset_right = 1152.0
offset_bottom = 212.0
theme_override_colors/font_color = Color(0.470588, 0, 1, 1)
theme_override_fonts/font = SubResource("SystemFont_2veon")
theme_override_font_sizes/font_size = 50
text = "Open the Door"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 60
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="Exit" type="Sprite2D" parent="VBoxContainer/HBoxContainer"]
position = Vector2(473, 17)
scale = Vector2(5, 5)
texture = ExtResource("2_n4oot")
metadata/_edit_group_ = true

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer/Exit"]
modulate = Color(1, 1, 1, 0)
offset_left = -12.6
offset_top = -8.0
offset_right = 3.4
offset_bottom = 8.0

[node name="Play" type="Sprite2D" parent="VBoxContainer/HBoxContainer"]
position = Vector2(572, 17)
scale = Vector2(5, 5)
texture = ExtResource("3_nnbfa")

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer/Play"]
modulate = Color(0, 0, 0, 0)
self_modulate = Color(0, 0, 0, 0.643137)
offset_left = -8.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = 8.0

[node name="Settings" type="Sprite2D" parent="VBoxContainer/HBoxContainer"]
position = Vector2(675, 17)
scale = Vector2(5, 5)
texture = ExtResource("4_64rmq")
metadata/_edit_group_ = true

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer/Settings"]
modulate = Color(1, 1, 1, 0)
offset_left = -8.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = 8.0

[node name="Settings" parent="." instance=ExtResource("5_1v61x")]
visible = false
layout_mode = 1

[node name="Control" parent="." instance=ExtResource("6_wfrdb")]
visible = false
layout_mode = 1

[node name="MenuMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_gi4p7")
autoplay = true
bus = &"Music"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_vr3fc")
bus = &"SFX"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/Exit/Button" to="." method="_on_button_pressed_sound"]
[connection signal="button_down" from="VBoxContainer/HBoxContainer/Play/Button" to="." method="_on_button_button_down"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Settings/Button" to="." method="_on_button_pressed"]
